# cramwell

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RENDER_DEPLOYMENT.md  dev.sh  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start-render.sh  start.sh  stop.sh
backend/: Dockerfile  memory_monitor.py  pyproject.toml  start-render.sh  start.sh  test_memory_fixes.py
backend/src/cramwell/: api_server.py  database.py  pinecone_service.py  server.py  utils.py  workflow.py
backend/src/cramwell/prompts/: response_template.jinja
backend/tools/: create_supabase_tables.py
backend/tools/supabase_schema/: 01_enums.sql  04_user_notebooks.sql  05_chat_sessions.sql  06_documents.sql  07_upload_documents.sql  08_contents.sql  11_sources_and_chat.sql  12_summary_table.sql  13_add_summary_content.sql  14_study_features_cache.sql  16_study_features_cache_utilities.sql
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CourseStatsPieChart.tsx  LoginForm.tsx  share-dialog.tsx  upload-dialog.tsx
frontend/hooks/: use-toast.ts
frontend/lib/: api.ts  supabaseClient.ts
frontend/types/: aos.d.ts  index.ts
src/cramwell/: api_server.py  instrumentation.py  pinecone_service.py  server.py  utils.py  (+1 more)
(+139 files in other folders)
